--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -6,6 +6,7 @@ services:
       context: ./api
       dockerfile: Dockerfile
     container_name: rag-api-prod
+    command: uvicorn main:app --host 0.0.0.0 --port 8001
     restart: unless-stopped
     ports:
       - "127.0.0.1:8001:8001"  # ローカルホストのみ
