--- a/backend/.env.prod.example
+++ b/backend/.env.prod.example
@@ -1,19 +1,15 @@
+# Production環境用設定ファイル
+# VPSにデプロイする際は.env.prodとしてコピーして使用
+
 # GitHub API Token (必須)
-# https://github.com/settings/tokens からPersonal Access Tokenを取得
 GITHUB_TOKEN=ghp_xxxxxxxxxxxxxxxx
 
 # RAG API認証キー (必須)
-# APIアクセス用の認証キー
 RAG_API_KEY=4f5793c108119abe
 
 # OpenAI API Key (チャット機能用 - オプション)
-# https://platform.openai.com/api-keys から取得
 # チャット機能を使用する場合は必須
 OPENAI_API_KEY=sk-xxxxxxxxxxxxxxxx
 
-# ChromaDB設定 (Docker環境用)
-CHROMA_HOST=chromadb
-CHROMA_PORT=8000
-
 # 環境設定
-ENV=development
+ENV=production
