--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,14 @@
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tiptap/extension-table": "^2.26.2",
+    "@tiptap/extension-table-cell": "^2.26.2",
+    "@tiptap/extension-table-header": "^2.26.2",
+    "@tiptap/extension-table-row": "^2.26.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "novel": "^1.0.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
