--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\""
   },
   "dependencies": {
+    "@dnd-kit/sortable": "^10.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@octokit/rest": "^22.0.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.90.2",
     "clsx": "^2.1.1",
+    "dnd-kit-sortable-tree": "^0.1.73",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
