--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,17 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "@tanstack/react-query": "^5.90.2",
+    "@tiptap/core": "2.26.3",
+    "@tiptap/extension-table": "2.26.3",
+    "@tiptap/extension-table-cell": "2.26.3",
+    "@tiptap/extension-table-header": "2.26.3",
+    "@tiptap/extension-table-row": "2.26.3",
+    "@tiptap/starter-kit": "2.26.3",
     "clsx": "^2.1.1",
     "dnd-kit-sortable-tree": "^0.1.73",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "novel": "^1.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
