--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,10 +27,14 @@
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "novel": "^1.0.2",
+    "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
     "tailwind-merge": "^3.3.1",
+    "unified": "^11.0.5",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
