--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.65.0",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "unified": "^11.0.5",
     "zod": "^4.1.12",
